crates/aiken-lang/src/tests/snapshots/fuzzer_annotations.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntest foo(n: Int via int()) {\n  todo\n}\n"
---
test foo(n: Int via int()) {
  todo
}
